@@ -1,3 +1,10 @@
+2004-09-16  Dirk Eibach  <eibach@gdsys.de>
+2004-09-19  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* cdl/jffs2.cdl: Fixed outdated definitions for compression options.
+	* src/fs-ecos.c: Added missing calls for jffs2_compressors_init()
+        and jffs2_compressors_exit() 
+
 2004-08-13  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/compr.h: Committed this file which if forgot yesterday.
